--- a/plugin.xml
+++ b/plugin.xml
@@ -5,29 +5,22 @@
    <extension
          point="org.eclipse.ui.views">
       <category
-            name="サンプル・カテゴリー"
+            name="Gikolipse"
             id="Gikolipse">
       </category>
       <view
-            name="BBSListOld"
-            icon="icons/sample.gif"
             category="Gikolipse"
-            class="gikolipse.views.BBSListView"
-            id="gikolipse.views.BBSListView">
+            class="com.github.gikolipse.views.ThreadListView"
+            icon="icons/sample.gif"
+            id="com.github.gikolipse.views.ThreadListView"
+            name="スレッド選択">
       </view>
       <view
             category="Gikolipse"
-            class="gikolipse.views.SampleView"
+            class="com.github.gikolipse.views.ThreadView"
             icon="icons/sample.gif"
-            id="gikolipse.views.SampleView"
-            name="サンプル・ビュー">
-      </view>
-      <view
-            category="Gikolipse"
-            class="com.github.gikolipse.views.BBSListView"
-            icon="icons/sample.gif"
-            id="com.github.gikolipse.views.BBSListView"
-            name="BBSList">
+            id="com.github.gikolipse.views.ThreadView"
+            name="スレッドビュー">
       </view>
    </extension>
    <extension
@@ -38,22 +31,13 @@
                ratio="0.5"
                relative="org.eclipse.ui.views.TaskList"
                relationship="right"
-               id="com.github.gikolipse.views.BBSListView">
+               id="com.github.gikolipse.views.ThreadListView">
          </view>
       </perspectiveExtension>
       <perspectiveExtension
             targetID="org.eclipse.jdt.ui.JavaPerspective">
          <view
-               id="gikolipse.views.ThreadListView"
-               ratio="0.5"
-               relationship="right"
-               relative="org.eclipse.ui.views.TaskList">
-         </view>
-      </perspectiveExtension>
-      <perspectiveExtension
-            targetID="org.eclipse.jdt.ui.JavaPerspective">
-         <view
-               id="gikolipse.views.SampleView"
+               id="com.github.gikolipse.views.ThreadView"
                ratio="0.5"
                relationship="right"
                relative="org.eclipse.ui.views.TaskList">
@@ -62,12 +46,6 @@
    </extension>
    <extension
          point="org.eclipse.help.contexts">
-      <contexts
-            file="contexts.xml">
-      </contexts>
-      <contexts
-            file="contexts.xml">
-      </contexts>
       <contexts
             file="contexts.xml">
       </contexts>
