--- a/plugin.xml
+++ b/plugin.xml
@@ -17,9 +17,9 @@
       </view>
       <view
             category="Gikolipse"
-            class="com.github.gikolipse.views.ThreadView"
+            class="com.github.gikolipse.views.BrowserView"
             icon="icons/sample.gif"
-            id="com.github.gikolipse.views.ThreadView"
+            id="com.github.gikolipse.views.BrowserView"
             name="スレッドビュー">
       </view>
    </extension>
@@ -38,6 +38,15 @@
             targetID="org.eclipse.jdt.ui.JavaPerspective">
          <view
                id="com.github.gikolipse.views.ThreadView"
+               ratio="0.5"
+               relationship="right"
+               relative="org.eclipse.ui.views.TaskList">
+         </view>
+      </perspectiveExtension>
+      <perspectiveExtension
+            targetID="org.eclipse.jdt.ui.JavaPerspective">
+         <view
+               id="com.github.gikolipse.views.BrowserView"
                ratio="0.5"
                relationship="right"
                relative="org.eclipse.ui.views.TaskList">
